// Copyright 2019 The LUCI Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package luci.resultsdb;

// TODO(jchinlee): Update protos and clarify documentation when finalized.
// Currently, these are for experimentation/iteration.

import "google/protobuf/field_mask.proto";
import "go.chromium.org/luci/results/proto/v1/invocation.proto";

option go_package = "go.chromium.org/luci/results/proto/v1;resultspb";

// Service to read test results.
service TestResults {
  // Returns an invocation.
  rpc GetInvocation(GetInvocationRequest) returns (Invocation) {};
}

// A request message for GetInvocation rpc.
message GetInvocationRequest {
  // ID of the requested invocation, see Invocation.id.
  string invocation_id = 1;

  // List of fields to include in the response.
  // Format: go/advanced-field-masks
  google.protobuf.FieldMask fields = 100;
}
